<resources>
    <string name="app_name">CurrencyConverter</string>
    <string name="convert_from">From</string>
    <string name="convert_to">To</string>
    <string name="currency_name">Австралийский доллар</string>
    <string name="button_text">CONVERT</string>
    <string name="edit_text_hint">введите сумму</string>
    <string name="text_view_hint">0.00</string>

    <string-array name="currency_names">
        <item>AUD</item>
        <item>AZN</item>
        <item>GBP</item>
        <item>AMD</item>
        <item>BYN</item>
        <item>BGN</item>
        <item>BRL</item>
        <item>HUF</item>
        <item>HKD</item>
        <item>DKK</item>
        <item>USD</item>
        <item>EUR</item>
        <item>INR</item>
        <item>KZT</item>
        <item>CAD</item>
        <item>KGS</item>
        <item>CNY</item>
        <item>MDL</item>
        <item>NOK</item>
        <item>PLN</item>
        <item>RON</item>
        <item>XDR</item>
        <item>SGD</item>
        <item>TJS</item>
        <item>TRY</item>
        <item>TMT</item>
        <item>UZS</item>
        <item>UAH</item>
        <item>CZK</item>
        <item>SEK</item>
        <item>CHF</item>
        <item>ZAR</item>
        <item>KRW</item>
        <item>JPY</item>
        <item>RUB</item>
    </string-array>

</resources>
